# cloakey

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORTED.md  cloak.bak  cloakey.bak
.github/: DISCUSSION_GUIDELINES.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  release.yml
Docs/: CLI spec.md  GitHub readme.md  PRD.md  Project blueprint.md  Tech architecture.md  Website copy.md  architecture.md  awesome_list_strategy.md  cli.md  distribution.md  marketing_strategy.md  releases.md  seo_meta.md
Docs/landing/: index.html
crates/cloakey-cli/: Cargo.toml
crates/cloakey-cli/src/: app.rs  commands.rs  error.rs  lock_screen.rs  logo_data.rs  main.rs  menu.rs  settings_menu.rs  startup.rs  tui.rs
crates/cloakey-core/: Cargo.toml
crates/cloakey-core/src/: error.rs  lib.rs  safety.rs  session.rs  state.rs  timer.rs
crates/cloakey-input/: Cargo.toml
crates/cloakey-input/src/: emergency.rs  error.rs  hooks.rs  keyboard.rs  lib.rs  mouse.rs
crates/cloakey-installer/: Cargo.toml  app.manifest  build.rs
crates/cloakey-installer/src/: main.rs
crates/cloakey-overlay/: Cargo.toml
crates/cloakey-overlay/src/: error.rs  lib.rs  window.rs
crates/cloakey-settings/: Cargo.toml
crates/cloakey-settings/src/: config.rs  error.rs  lib.rs  overlay.rs  shortcuts.rs
crates/cloakey-tray/: Cargo.toml  build.rs
crates/cloakey-tray/src/: app_loop.rs  hotkeys.rs  icon.rs  lib.rs  main.rs  tray.rs
