[package]
name = "cloakey-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CloaKey core — lock state machine, timer engine, session manager, safety controller"

[dependencies]
cloakey-settings = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
