[package]
name = "cloakey-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CloaKey Windows Installer and Uninstaller Utility"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
windows = { workspace = true }

[build-dependencies]
winres = { workspace = true }
