[package]
name = "cloakey-settings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CloaKey settings — TOML configuration and user preferences"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
