[package]
name = "cloakey-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CloaKey Background Daemon — System Tray & Global Hotkeys"

[[bin]]
name = "cloak-tray"
path = "src/main.rs"

[dependencies]
cloakey-core     = { workspace = true }
cloakey-settings = { workspace = true }
cloakey-input    = { workspace = true }
cloakey-overlay  = { workspace = true }

tray-icon        = { workspace = true }
muda             = { workspace = true }
global-hotkey    = { workspace = true }
image            = { workspace = true }
crossbeam-channel = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
dirs             = { workspace = true }
windows          = { workspace = true }

[build-dependencies]
winres = { workspace = true }
